[project]
name = "chart-interpreter"
version = "0.1.0"
description = "찰눈(차트보는눈) — 차트 해석·요약 독립 라이브러리 (주단/코단/비단 공용)"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
visualizer = ["mplfinance>=0.12"]

[dependency-groups]
dev = [
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "pytest>=7.0.0",
    "mplfinance>=0.12",
    "pandas-stubs>=2.0.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
strict = true
# 런타임 지원 버전은 [project].requires-python(">=3.11")이 단일 출처 — 이 값은 mypy가
# numpy 등 의존성 stub의 PEP 695 `type` 문법을 정상 파싱하기 위한 정적 분석 설정일 뿐,
# 3.12 미만 환경에서 이 라이브러리가 동작하지 않는다는 뜻이 아니다(우리 코드는 3.12 전용
# 문법을 쓰지 않음). 3.11로 두면 numpy stub 파싱 자체가 SyntaxError로 막혀 mypy strict가
# 항상 실패하는 문제를 실측 확인해 3.12로 조정.
python_version = "3.12"

[[tool.mypy.overrides]]
module = ["mplfinance.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chart_interpreter"]
